--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^3.2.3",
     "react-scripts": "3.0.1"
   },
   "scripts": {
